Mac menu icon alignment: Account for menuitem's with an "empty" image element - Bug #97494 r=marky
(integrated from komodo (trunk) change 77130 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@11843 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/mac/platform.less
+++ b/src/chrome/komodo/skin/plat/mac/platform.less
@@ -77,8 +77,11 @@ menu, menuitem
 {
     padding-left: 26px;
 
-    .menu-iconic-left
+    .menu-iconic-icon:not([disabled])
     {
+	/* force 16px width as some menuitems have an image element with
+	 * no actual image src */
+	width: 16px;
 	margin-left: -21px;
     }
 }
